[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kla1mzZz <kla1mzz16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
